--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8cae877e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9d8fc6af90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cae88c8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8cae88cad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d8fbff990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9d8fbffb90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8caee66290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8caee66490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d901d73d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9d901d75d0&gt;]</pre>
 </div>
 
 </div>
