--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f214b71dbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe077e05c10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f214b40f910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f214b40fb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe077af2990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe077af2b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f214b9ae3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f214b9ae5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe078092350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe078092550&gt;]</pre>
 </div>
 
 </div>
