--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7b2affee50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff9e6cff5d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b2acd0890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b2acd0a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9e69b1990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff9e69bea10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b2b2aa350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b2b2aa550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9e6f813d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff9e6f8c510&gt;]</pre>
 </div>
 
 </div>
