--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc152566ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f910e3d45d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc15225a390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc15225a690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f910e39ab50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f910e39ad50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc152813510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc152813710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f910e942490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f910e942690&gt;]</pre>
 </div>
 
 </div>
