--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54f26be310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff622000590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54f268ea10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54f268ec10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff61bbf7990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff61bbf7b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54f2c34410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54f2c34610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff61c19a350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff61c19a550&gt;]</pre>
 </div>
 
 </div>
