--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9f57c081d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce8bc48590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f57bce850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9f57bcea90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce8b94dad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce8b94dcd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f5816f310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9f5816f550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce8bef3490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce8bef3690&gt;]</pre>
 </div>
 
 </div>
