--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fec9efa6c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9d2c29ddd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fec9efbc990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fec9efbcb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d2c873ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9d2c873cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fec9f5963d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fec9f5965d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d2ce19450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9d2ce19650&gt;]</pre>
 </div>
 
 </div>
