--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4b6405110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c673eb090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4b63f2a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4b63f2c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c673a4dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c673a4fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4b6994410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4b6994610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c6795a790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c6795a990&gt;]</pre>
 </div>
 
 </div>
