--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff21efff550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8417d4f1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff21f5d6910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff21f5d6b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8417a56b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8417a56dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff21fb76310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff21fb76510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8417ffe610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8417ffe850&gt;]</pre>
 </div>
 
 </div>
