--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff1826d3750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4ae2538d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1823a8a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1823a8c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4ae2c1cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe4adf5fc10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1829823d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1829825d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4ae54e9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe4ae502590&gt;]</pre>
 </div>
 
 </div>
