--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7741108650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6549508b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f77410f9890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f77410f9a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f65494d3990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f65494d3b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7741698310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f77416984d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6549a77310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6549a77510&gt;]</pre>
 </div>
 
 </div>
