--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f71ec9d4cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4c5cf0c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71ec6a6910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71ec6a6b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4c5d41990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa4c5d41bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71ecc7f390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71ecc7f590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4c62e03d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa4c62e0610&gt;]</pre>
 </div>
 
 </div>
