--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f68b7a5d590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f79aa3341d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68b7a2c9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f68b7a2cbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79aa024990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79aa024b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68b7fcf490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f68b7fcf690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79aa5c32d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79aa5c34d0&gt;]</pre>
 </div>
 
 </div>
