--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0dae30f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa7a1429e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0db405890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0db405ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7a1115850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa7a1115a50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0db9a4290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0db9a44d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7a16b61d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa7a16b63d0&gt;]</pre>
 </div>
 
 </div>
