--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2c6ab15f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa2abc613d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c6aaf1ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2c6aaf1cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2ac215c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa2ac244dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c6b09a410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2c6b09a610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2ac7e0650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa2ac7ec790&gt;]</pre>
 </div>
 
 </div>
