--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f34f9597bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa40d69d1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34f9288950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34f9288b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa40d3aaa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa40d3aac90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34f9827310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34f9827510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa40d94f410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa40d94f610&gt;]</pre>
 </div>
 
 </div>
