--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f51ab7392d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0343318d90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f51ab6fbc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f51ab6fbe50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0343748b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0343748d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f51abca0550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f51abca0750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0343ced450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0343ced650&gt;]</pre>
 </div>
 
 </div>
