--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c4eb2b190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d016626d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c4e80e990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c4e80eb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d01349d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d01652b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c4edad310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c4edad510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d01c45190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d01bf3490&gt;]</pre>
 </div>
 
 </div>
