--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3deff58990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f94bf7d6b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3deff22a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3deff22c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94bf4e1950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94bf4e1b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3df04c6410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3df04c6610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94bf48af10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94bfa845d0&gt;]</pre>
 </div>
 
 </div>
